--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.2.1
   intl: ^0.20.2
+  supabase_flutter: ^2.10.3
 
 dev_dependencies:
   flutter_test:
