--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_svg: ^2.2.1
   get_it: ^8.2.0
   intl: ^0.20.2
+  shared_preferences: ^2.5.3
   supabase_flutter: ^2.10.3
 
 dev_dependencies:
