--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Расписание",
-    "short_name": "Schedule",
-    "start_url": "/shedule/",
+    "short_name": "Расписание",
+    "start_url": "/shedule/?source=pwa",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#ffffff",
